@@ -5,3 +5,8 @@ Csaba Henk <csaba.henk@creo.hu>
 Sebastien Delafond <sdelafond@gmx.net>
 Steven James
 Jeff Epler         <jepler@unpythonic.dhs.org>
+
+Contributions
+=============
+
+hello.py by Andrew Straw <strawman@astraw.com>
