@@ -12,7 +12,7 @@ The best way to install this python FUSE module is:
     accordingly.)
  2. You might try xmp.py, the example filesystem. Just link
     build/lib.*/_fusemodule.so to the top of the source tree and
-    see what "python xmp.py -h" gives.
+    see what "python example/xmp.py -h" gives.
  3. If all has gone ok, become root and type 'python setup.py install'.
 
 That way, the FUSE python modules will be built against the correct version
