@@ -1,0 +1,98 @@
+#!/usr/bin/env python
+
+#    Copyright (C) 2006  Andrew Straw  <strawman@astraw.com>
+#
+#    This program can be distributed under the terms of the GNU LGPL.
+#    See the file COPYING.
+#
+
+import os, stat, errno
+# some spaghetti to make it usable without fuse-py being installed
+for i in True, False:
+    try:
+        import fuse
+        from fuse import Fuse
+    except ImportError:
+        if i:
+            try:
+                import _find_fuse_parts
+            except ImportError:
+                pass
+        else:
+            raise
+
+
+if not hasattr(fuse, '__version__'):
+    raise RuntimeError, \
+        "your fuse-py doesn't know of fuse.__version__, probably it's too old."
+
+
+hello_path = '/hello'
+hello_str = 'Hello World!\n'
+
+class MyStat(fuse.Stat):
+    def __init__(self):
+        self.st_mode = 0
+        self.st_ino = 0
+        self.st_dev = 0
+        self.st_nlink = 0
+        self.st_uid = 0
+        self.st_gid = 0
+        self.st_size = 0
+        self.st_atime = 0
+        self.st_mtime = 0
+        self.st_ctime = 0
+
+class HelloFS(Fuse):
+
+    def getattr(self, path):
+        st = MyStat()
+        if path == '/':
+            st.st_mode = stat.S_IFDIR | 0755
+            st.st_nlink = 2
+        elif path == hello_path:
+            st.st_mode = stat.S_IFREG | 0444
+            st.st_nlink = 1
+            st.st_size = len(hello_str)
+        else:
+            return -errno.ENOENT
+        return st
+    
+    def readdir(self, path, offset):
+        for r in  '.', '..', hello_path[1:]:
+            yield fuse.Direntry(r)
+    
+    def open(self, path, flags):
+        if path != hello_path:
+            return -errno.ENOENT
+        accmode = os.O_RDONLY | os.O_WRONLY | os.O_RDWR
+        if (flags & accmode) != os.O_RDONLY:
+            return -errno.EACCES
+    
+    def read(self, path, size, offset):
+        if path != hello_path:
+            return -errno.ENOENT
+        slen = len(hello_str)
+        if offset < slen:
+            if offset + size > slen:
+                size = slen - offset
+            buf = hello_str[offset:offset+size]
+        else:
+            buf = ''
+        return buf
+
+def main():
+    usage="""
+Userspace hello example
+
+""" + Fuse.fusage
+    server = HelloFS(version="%prog " + fuse.__version__,
+                     usage=usage,
+                     dash_s_do='setsingle',
+		     fetch_mp=True)
+    
+    server.parse(errex=1)
+    server.main()
+
+if __name__ == '__main__':
+    main()
